fixed funky center alignment

--- a/trunk/pennfitness/css/styles_overlay.css
+++ b/trunk/pennfitness/css/styles_overlay.css
@@ -1,7 +1,3 @@
-
-div.overlayOne{
-	text-align:left;
-}
 div.overlayOne ul.yui-nav{
 	width:100%;
 }
@@ -65,17 +61,17 @@ div.overlayTwo div.yui-content div.routeSearch{
 
 
 #panel1 {
-//	position:absolute;
-//	left:300px;
-//	top:200px;
+/*	position:absolute;
+	left:300px;
+	top:200px; */
 	width:800px;
 	height:400px;
 	background:blue;
 }
 #panel2 {
-//	position:absolute;
-//	left:300px;
-//	top:200px;
+/*	position:absolute;
+	left:300px;
+	top:200px; */
 	width:800px;
 	height:400px;
 	background:blue;
